3-Networking/todo-app-backend-service.yaml
# Service inside of your namespace, pointing to the backend
apiVersion: v1
kind: Service
metadata:
  # Note that this name is also the DNS entry
  name: todo-app-backend
spec:
  ports:
  # Below: Port of outgoing traffic (the port defined by the container)
  - targetPort: 8080
    # Below: Port of incoming traffic
    port: 80
    protocol: TCP
  selector:
    # Add the same labels, to which deployment you want to reference...
    app.kubernetes.io/name: todo-app
    app.kubernetes.io/component: backend
  type: ClusterIP
